--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,44 +1,41 @@
-<nav style="background-color: #252b34" class="navbar navbar-expand-lg">
-  <a class="navbar-brand" routerLink="/" routerLinkActive="active">BookInvet</a>
-  <button
-    class="navbar-toggler"
-    type="button"
-    data-toggle="collapse"
-    data-target="#navbarsExample09"
-    aria-controls="navbarsExample09"
-    aria-expanded="false"
-    aria-label="Toggle navigation"
-  >
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarsExample09">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
+<div class="wrapper row2">
+  <nav id="mainav" style="background-color: #252b34" class="navbar hoc clear">
+    <ul class="clear">
+      <li class="active">
+        <a
+          style="margin-left: 20px; color: aliceblue"
+          class="navbar-brand"
+          routerLink="/"
+          routerLinkActive="active"
+          >BookInvet</a
+        >
+      </li>
+      <li class="nav-item" style="margin-left: 30px; padding-top: 3px">
         <a class="nav-link" routerLink="/book">Books</a>
       </li>
-
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/login">Log In</a>
-      </li>
-
-      <li class="nav-item dropdown form-inline my-2 my-md-0">
-        <a
-          class="nav-link dropdown-toggle"
-          id="dropdown09"
-          data-toggle="dropdown"
-          aria-haspopup="true"
-          aria-expanded="false"
-          >UserName</a
+    </ul>
+    <ul class="clear" style="float: right">
+      <li class="nav-item" style="margin-left: 700px; padding-top: 3px">
+        <a class="nav-link" routerLink="/login" style="color: #82b440"
+          >Log In</a
         >
-        <div class="sticky-top">
-          <div class="dropdown-menu" aria-labelledby="dropdown09">
-            <a class="dropdown-item" routerLink="/admin/books">Manage Books</a>
-
+      </li>
+      <li style="padding-top: 3px; margin-right: 50px">
+        <a class="drop">UserName</a>
+        <ul>
+          <li>
+            <a
+              class="dropdown-item"
+              style="color: aliceblue"
+              routerLink="/admin/books"
+              >Manage Books</a
+            >
+          </li>
+          <li>
             <a class="dropdown-item" (click)="logout()">Log Out</a>
-          </div>
-        </div>
+          </li>
+        </ul>
       </li>
     </ul>
-  </div>
-</nav>
+  </nav>
+</div>
