--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -848,6 +848,10 @@ table a,
 
   .container {
   }
+  .container {
+    padding: 80px 0;
+  }
+
   #comments input[type="reset"] {
     margin-top: 10px;
   }
