--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,7 @@
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+/>
 <body id="top">
   <div
     class="wrapper bgded overlay"
@@ -7,7 +11,7 @@
   >
     <div id="pageintro" class="hoc clear">
       <article style="margin-left: 100px" class="introtxt">
-        <h2 class="heading">Book Inventory</h2>
+        <h2 class="heading" style="color: aliceblue">Book Inventory</h2>
         <p>The world of Books !</p>
         <footer>
           <div class="nospace inline pushright">
@@ -23,63 +27,203 @@
       </article>
     </div>
   </div>
+  <br />
+  <div class="row">
+    <div class="wrapper row4">
+      <div class="hoc container clear">
+        <ul class="nospace elements clear">
+          <li class="one_third first">
+            <article>
+              <figure>
+                <img src="images/demo/320x220.png" alt="" />
+                <figcaption>
+                  <button
+                    type="button"
+                    class="btn btn-primary"
+                    data-toggle="modal"
+                    data-target="#product_view"
+                  >
+                    View Details &raquo;
+                  </button>
+                </figcaption>
+              </figure>
+              <div class="txtwrap">
+                <h6 class="heading">Nulla quis fermentum</h6>
+                <p>
+                  Justo viverra imperdiet proin ut mollis risus ut cursus auctor
+                  orci quis iaculis nisi sollicitudin eget pellentesque rutrum
+                  mauris et&hellip;
+                </p>
+              </div>
+            </article>
+          </li>
+          <li class="one_third">
+            <article>
+              <figure>
+                <img src="images/demo/320x220.png" alt="" />
+                <figcaption>
+                  <button
+                    type="button"
+                    class="btn btn-primary"
+                    data-toggle="modal"
+                    data-target="#product_view"
+                  >
+                    View Details &raquo;
+                  </button>
+                </figcaption>
+              </figure>
+              <div class="txtwrap">
+                <h6 class="heading">Nulla quis fermentum</h6>
+                <p>
+                  Justo viverra imperdiet proin ut mollis risus ut cursus auctor
+                  orci quis iaculis nisi sollicitudin eget pellentesque rutrum
+                  mauris et&hellip;
+                </p>
+              </div>
+            </article>
+          </li>
+          <li class="one_third">
+            <article>
+              <figure>
+                <img src="images/demo/320x220.png" alt="" />
+                <figcaption><a href="#">View Details &raquo;</a></figcaption>
+              </figure>
+              <div class="txtwrap">
+                <h6 class="heading">Feugiat cras ultrices</h6>
+                <p>
+                  Ullamcorper ut vivamus dignissim fringilla metus sed aliquet
+                  nunc ut dolor arcu euismod id tincidunt id ullamcorper ac
+                  urna&hellip;
+                </p>
+              </div>
+            </article>
+          </li>
+          <li class="one_third">
+            <article>
+              <figure>
+                <img src="images/demo/320x220.png" alt="" />
+                <figcaption><a href="#">View Details &raquo;</a></figcaption>
+              </figure>
+              <div class="txtwrap">
+                <h6 class="heading">Risus non iaculis</h6>
+                <p>
+                  Mauris pellentesque pellentesque quisque velit elit venenatis
+                  et sodales ut commodo nec odio in sit amet tempus felis
+                  scelerisque&hellip;
+                </p>
+              </div>
+            </article>
+          </li>
+        </ul>
+        <!-- ################################################################################################ -->
+        <div class="clear"></div>
+      </div>
+    </div>
+    <!-- <div class="col-md-2" style="margin-left: 250px">
+      <div class="thumbnail">
+        <img src="" alt="" class="img-responsive" />
+        <div class="caption">
+          <h4 class="pull-right">$700.99</h4>
+          <h4><a href="#">Mobile Product</a></h4>
+          <p>Lorem Ipsum</p>
+        </div>
 
-  <div class="wrapper row4">
-    <div class="hoc container clear">
-      <!-- ################################################################################################ -->
-      <ul class="nospace elements">
-        <li class="one_third first">
-          <article>
-            <figure>
-              <img src="images/demo/320x220.png" alt="" />
-              <figcaption><a href="#">View Details &raquo;</a></figcaption>
-            </figure>
-            <div class="txtwrap">
-              <h6 class="heading">Nulla quis fermentum</h6>
-              <p>
-                Justo viverra imperdiet proin ut mollis risus ut cursus auctor
-                orci quis iaculis nisi sollicitudin eget pellentesque rutrum
-                mauris et&hellip;
-              </p>
+        <div class="space-ten"></div>
+        <div class="btn-ground text-center">
+          <button
+            type="button"
+            class="btn btn-primary"
+            data-toggle="modal"
+            data-target="#product_view"
+          >
+            <i class="fa fa-search"></i> Quick View
+          </button>
+        </div>
+        <div class="space-ten"></div>
+      </div>
+    </div>
+    <div class="col-md-2" style="align-items: center; margin-left: 50px">
+      <div class="thumbnail">
+        <img src="" alt="" class="img-responsive" />
+        <div class="caption">
+          <h4 class="pull-right">$700.99</h4>
+          <h4><a href="#">Mobile Product</a></h4>
+          <p>Lorem Ipsum</p>
+        </div>
+
+        <div class="space-ten"></div>
+        <div class="btn-ground text-center">
+          <button
+            type="button"
+            class="btn btn-primary"
+            data-toggle="modal"
+            data-target="#product_view"
+          >
+            <i class="fa fa-search"></i> Quick View
+          </button>
+        </div>
+        <div class="space-ten"></div>
+      </div>
+    </div> -->
+    <!-- <div class="col-md-2" style="align-items: center; margin-left: 50px">
+      <div class="thumbnail">
+        <img src="" alt="" class="img-responsive" />
+        <div class="caption">
+          <h4 class="pull-right">$700.99</h4>
+          <h4><a href="#">Mobile Product</a></h4>
+          <p>Lorem Ipsum</p>
+        </div>
+
+        <div class="space-ten"></div>
+        <div class="btn-ground text-center">
+          <button
+            type="button"
+            class="btn btn-primary"
+            data-toggle="modal"
+            data-target="#product_view"
+          >
+            <i class="fa fa-search"></i> Quick View
+          </button>
+        </div>
+        <div class="space-ten"></div>
+      </div>
+    </div>
+  </div> -->
+
+    <div class="modal fade product_view" id="product_view">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <a href="#" data-dismiss="modal" class="class pull-right"
+              ><span class="glyphicon glyphicon-remove"></span
+            ></a>
+            <h3 class="modal-title">HTML5 is a markup language</h3>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4 product_img">
+                <img
+                  style="height: 100px"
+                  src="http://img.bbystatic.com/BestBuy_US/images/products/5613/5613060_sd.jpg"
+                  class="img-responsive"
+                />
+              </div>
+              <div class="col-md-4 product_content">
+                <h4>Product Id: <span>51526</span></h4>
+
+                <p>Lorem Ipsum</p>
+                <h3 class="cost">
+                  <span class="glyphicon glyphicon-usd"></span> 75.00
+                  <small class="pre-cost"
+                    ><span class="glyphicon glyphicon-usd"></span> 60.00</small
+                  >
+                </h3>
+              </div>
             </div>
-          </article>
-        </li>
-        <li class="one_third">
-          <article>
-            <figure>
-              <img src="images/demo/320x220.png" alt="" />
-              <figcaption><a href="#">View Details &raquo;</a></figcaption>
-            </figure>
-            <div class="txtwrap">
-              <h6 class="heading">Feugiat cras ultrices</h6>
-              <p>
-                Ullamcorper ut vivamus dignissim fringilla metus sed aliquet
-                nunc ut dolor arcu euismod id tincidunt id ullamcorper ac
-                urna&hellip;
-              </p>
-            </div>
-          </article>
-        </li>
-        <li class="one_third">
-          <article>
-            <figure>
-              <img src="images/demo/320x220.png" alt="" />
-              <figcaption><a href="#">View Details &raquo;</a></figcaption>
-            </figure>
-            <div class="txtwrap">
-              <h6 class="heading">Risus non iaculis</h6>
-              <p>
-                Mauris pellentesque pellentesque quisque velit elit venenatis et
-                sodales ut commodo nec odio in sit amet tempus felis
-                scelerisque&hellip;
-              </p>
-            </div>
-          </article>
-        </li>
-      </ul>
-      <!-- ################################################################################################ -->
-      <div class="clear"></div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
+  <a id="backtotop" href="#top">fgjjffj<i class="fa fa-chevron-up"></i></a>
 </body>
