--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -29,96 +29,81 @@
   </div>
   <br />
   <div class="row">
-    <div class="wrapper row4">
+    <div class="wrapper">
       <div class="hoc container clear">
-        <ul class="nospace elements clear">
-          <li class="one_third first">
-            <article>
-              <figure>
-                <img src="images/demo/320x220.png" alt="" />
-                <figcaption>
-                  <button
-                    type="button"
-                    class="btn btn-primary"
-                    data-toggle="modal"
-                    data-target="#product_view"
-                  >
-                    View Details &raquo;
-                  </button>
-                </figcaption>
-              </figure>
-              <div class="txtwrap">
-                <h6 class="heading">Nulla quis fermentum</h6>
-                <p>
-                  Justo viverra imperdiet proin ut mollis risus ut cursus auctor
-                  orci quis iaculis nisi sollicitudin eget pellentesque rutrum
-                  mauris et&hellip;
-                </p>
-              </div>
-            </article>
-          </li>
-          <li class="one_third">
-            <article>
-              <figure>
-                <img src="images/demo/320x220.png" alt="" />
-                <figcaption>
-                  <button
-                    type="button"
-                    class="btn btn-primary"
-                    data-toggle="modal"
-                    data-target="#product_view"
-                  >
-                    View Details &raquo;
-                  </button>
-                </figcaption>
-              </figure>
-              <div class="txtwrap">
-                <h6 class="heading">Nulla quis fermentum</h6>
-                <p>
-                  Justo viverra imperdiet proin ut mollis risus ut cursus auctor
-                  orci quis iaculis nisi sollicitudin eget pellentesque rutrum
-                  mauris et&hellip;
-                </p>
-              </div>
-            </article>
-          </li>
-          <li class="one_third">
-            <article>
-              <figure>
-                <img src="images/demo/320x220.png" alt="" />
-                <figcaption><a href="#">View Details &raquo;</a></figcaption>
-              </figure>
-              <div class="txtwrap">
-                <h6 class="heading">Feugiat cras ultrices</h6>
-                <p>
-                  Ullamcorper ut vivamus dignissim fringilla metus sed aliquet
-                  nunc ut dolor arcu euismod id tincidunt id ullamcorper ac
-                  urna&hellip;
-                </p>
-              </div>
-            </article>
-          </li>
-          <li class="one_third">
-            <article>
-              <figure>
-                <img src="images/demo/320x220.png" alt="" />
-                <figcaption><a href="#">View Details &raquo;</a></figcaption>
-              </figure>
-              <div class="txtwrap">
-                <h6 class="heading">Risus non iaculis</h6>
-                <p>
-                  Mauris pellentesque pellentesque quisque velit elit venenatis
-                  et sodales ut commodo nec odio in sit amet tempus felis
-                  scelerisque&hellip;
-                </p>
-              </div>
-            </article>
-          </li>
-        </ul>
-        <!-- ################################################################################################ -->
-        <div class="clear"></div>
+        <div class="nospace elements clear">
+          <div class="row">
+            <div
+              style="margin-left: 600px; margin-bottom: 50px; margin-top: -50px"
+              class="center btmspace-80"
+            >
+              <h2 class="heading font-x3">-- New Books --</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div style="margin-left: 150px" class="col-md-3 one_third first">
+              <article>
+                <figure>
+                  <img src="images/demo/320x220.png" alt="" />
+                  <figcaption>
+                    <button
+                      type="button"
+                      class="btn btn-primary"
+                      data-toggle="modal"
+                      data-target="#product_view"
+                    >
+                      View Details &raquo;
+                    </button>
+                  </figcaption>
+                </figure>
+                <div class="txtwrap">
+                  <h6 class="heading">Nulla quis fermentum</h6>
+                  <p>Justo viverra imperdiet proin ut moldivs</p>
+                </div>
+              </article>
+            </div>
+            <div style="margin-left: 70px" class="col-md-3 one_third">
+              <article>
+                <figure>
+                  <img src="images/demo/320x220.png" alt="" />
+                  <figcaption>
+                    <button
+                      type="button"
+                      class="btn btn-primary"
+                      data-toggle="modal"
+                      data-target="#product_view"
+                    >
+                      View Details &raquo;
+                    </button>
+                  </figcaption>
+                </figure>
+                <div class="txtwrap">
+                  <h6 class="heading">Nulla quis fermentum</h6>
+                  <p>Justo viverra imperdiet proin ut moldivs</p>
+                </div>
+              </article>
+            </div>
+            <div style="margin-left: 30px" class="col-md-3 one_third">
+              <article>
+                <figure>
+                  <img src="images/demo/320x220.png" alt="" />
+                  <figcaption><a href="#">View Details &raquo;</a></figcaption>
+                </figure>
+                <div class="txtwrap">
+                  <h6 class="heading">Risus non iacudivs</h6>
+                  <p>
+                    Mauris pellentesque pellentesque quisque vedivt edivt
+                    venenatis et sodales ut commodo nec odio in sit amet tempus
+                    fedivs
+                  </p>
+                </div>
+              </article>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+
     <!-- <div class="col-md-2" style="margin-left: 250px">
       <div class="thumbnail">
         <img src="" alt="" class="img-responsive" />
@@ -142,7 +127,7 @@
         <div class="space-ten"></div>
       </div>
     </div>
-    <div class="col-md-2" style="align-items: center; margin-left: 50px">
+    <div class="col-md-2" style="adivgn-items: center; margin-left: 50px">
       <div class="thumbnail">
         <img src="" alt="" class="img-responsive" />
         <div class="caption">
@@ -201,14 +186,14 @@
           </div>
           <div class="modal-body">
             <div class="row">
-              <div class="col-md-4 product_img">
+              <div class="col-md-3 product_img">
                 <img
                   style="height: 100px"
                   src="http://img.bbystatic.com/BestBuy_US/images/products/5613/5613060_sd.jpg"
                   class="img-responsive"
                 />
               </div>
-              <div class="col-md-4 product_content">
+              <div class="col-md-3 product_content">
                 <h4>Product Id: <span>51526</span></h4>
 
                 <p>Lorem Ipsum</p>
