--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,3 +1,9 @@
+button {
+  width: 400px;
+  height: 70px;
+  margin-top: 20px;
+  margin-left: 50px;
+}
 input.ng-invalid.ng-touched {
   border: 1px solid red;
 }
