--- a/src/app/book/book-form/book-form.component.css
+++ b/src/app/book/book-form/book-form.component.css
@@ -12,7 +12,7 @@ body {
 
 .sidenav {
   height: 100%;
-  margin-top: 55px;
+  margin-top: 4%;
   background-color: #252b34;
   overflow-x: hidden;
   padding-top: 20px;
