--- a/src/app/book/book-form/book-form.component.html
+++ b/src/app/book/book-form/book-form.component.html
@@ -9,29 +9,29 @@
     </div>
   </div>
 
-  <div class="main" style="margin-top: 50px">
+  <div class="main" style="margin-top: 10px">
     <div class="row">
       <br />
       <div class="col-md-8">
-        <form (ngSubmit)="onSave(f)" #f="ngForm">
+        <form [formGroup]="bookFG" (ngSubmit)="onSave()">
           <div class="col-md-8 form-group">
             <label for="title">Title</label>
             <input
               #title
               type="text"
               id="title"
-              name="title"
               class="form-control"
-              [(ngModel)]="newbook.title"
+              formControlName="title"
             />
 
-            <div class="alert-danger" *ngIf="f.invalid && f.touched">
-              <div *ngIf="f.errors.required">Please enter the title</div>
-              <div *ngIf="f.errors.minLength">
+            <div class="alert-danger" *ngIf="title.invalid && title.touched">
+              <div *ngIf="title.errors.required">Please enter the title</div>
+              <div *ngIf="title.errors.minLength">
                 Title should be more then 3 lett.
               </div>
             </div>
           </div>
+
           <div class="col-md-8 form-group">
             <label for="author">Author Name</label>
             <div class="input-group mb-3">
@@ -39,12 +39,12 @@
                 #author
                 type="text"
                 id="author"
-                name="author"
-                [(ngModel)]="newbook.author"
+                formControlName="author"
                 class="form-control"
               />
             </div>
           </div>
+
           <div class="col-md-9 form-group">
             <label for="description">Description</label>
             <div class="input-group mb-3">
@@ -52,62 +52,59 @@
                 #description
                 type="text"
                 id="description"
-                name="description"
-                [(ngModel)]="newbook.description"
+                formControlName="description"
                 class="form-control"
                 rows="3"
               ></textarea>
             </div>
           </div>
+
           <div class="col-md-8 form-group">
             <label for="price">Price</label>
             <div class="input-group mb-3">
               <div class="input-group-prepend">
                 <span class="input-group-text">$</span>
               </div>
+
               <input
                 #price
                 type="number"
                 id="price"
-                name="price"
-                [(ngModel)]="newbook.price"
+                formControlName="price"
                 class="form-control"
               />
             </div>
           </div>
 
           <div class="col-md-8 form-group">
-            <!--            <label for="Category">Category</label>-->
-            <!-- <select class="form-control" id="category"
-                     y"
-                      [(ngModel)]="book.image"
-                <option value=""> </option>
-                
-                <option *ngFor="let c of categories" [value]="c.$key">
-                  {{c.name}}
-                </option>
-              </select> -->
+            <label for="category">Category</label>
+            <select
+              class="form-control"
+              formControlName="category"
+              id="category"
+            >
+              <option
+                *ngFor="
+                  let category of bookMetadata?.category?.fieldDataPool?.list
+                "
+                [value]="category?.id"
+              >
+                {{ category?.label }}
+              </option>
+            </select>
           </div>
+
           <div class="col-md-8 form-group">
             <label for="image">Image Url</label>
             <input
               #image
               id="image"
               type="text"
-              name="image"
-              [(ngModel)]="newbook.image"
+              formControlName="image"
               class="form-control"
             />
           </div>
           <button type="submit" class="btn btn-success">Save</button>
-          <button
-            style="margin-left: 10px"
-            type="button"
-            (click)="onDelete()"
-            class="btn btn-danger"
-          >
-            Delete
-          </button>
         </form>
       </div>
       <div class="col-md-3">
@@ -116,7 +113,12 @@
           <div class="card-body">
             <h5 class="card-title">{{ title.value }}</h5>
             <h2 class="card-text">{{ author.value }}</h2>
-            <p class="card-text">{{ description.value }}</p>
+            <p
+              class="card-text"
+              style="width: 100%; height: 120px; overflow: hidden"
+            >
+              {{ description.value }}
+            </p>
             <p class="card-text">{{ price.value | currency: "USD":true }}</p>
           </div>
         </div>
