--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,41 +1,46 @@
-<div class="wrapper row2">
-  <nav id="mainav" style="background-color: #252b34" class="navbar hoc clear">
-    <ul class="clear">
-      <li class="active">
-        <a
-          style="margin-left: 20px; color: aliceblue"
-          class="navbar-brand"
-          routerLink="/"
-          routerLinkActive="active"
-          >BookInvet</a
-        >
-      </li>
-      <li class="nav-item" style="margin-left: 30px; padding-top: 3px">
-        <a class="nav-link" routerLink="/book">Books</a>
-      </li>
-    </ul>
-    <ul class="clear" style="float: right">
-      <li class="nav-item" style="margin-left: 700px; padding-top: 3px">
-        <a class="nav-link" routerLink="/login" style="color: #82b440"
-          >Log In</a
-        >
-      </li>
-      <li style="padding-top: 3px; margin-right: 50px">
-        <a class="drop">UserName</a>
-        <ul>
-          <li>
-            <a
-              class="dropdown-item"
-              style="color: aliceblue"
-              routerLink="/admin/books"
-              >Manage Books</a
-            >
-          </li>
-          <li>
-            <a class="dropdown-item" (click)="logout()">Log Out</a>
-          </li>
-        </ul>
-      </li>
-    </ul>
-  </nav>
-</div>
+<nav
+  id="mainav"
+  style="position: static; background-color: #252b34"
+  class="navbar hoc clear"
+>
+  <ul class="clear">
+    <li class="active">
+      <a
+        style="margin-left: 20px; color: aliceblue"
+        class="navbar-brand"
+        routerLink="/"
+        routerLinkActive="active"
+        >BookInvet</a
+      >
+    </li>
+    <li class="nav-item" style="margin-left: 30px; padding-top: 3px">
+      <a class="nav-link" routerLink="/book">Books</a>
+    </li>
+  </ul>
+  <ul class="clear" style="float: right">
+    <li class="nav-item" style="padding-top: 3px">
+      <a class="nav-link" routerLink="/login" style="color: #82b440">Log In</a>
+    </li>
+    <li class="nav-item" style="padding-top: 3px">
+      <a class="nav-link" routerLink="/signup" style="color: aliceblue"
+        >Register</a
+      >
+    </li>
+    <li style="padding-top: 3px; margin-right: 50px">
+      <a class="drop">UserName</a>
+      <ul>
+        <li>
+          <a
+            class="dropdown-item"
+            style="color: aliceblue"
+            routerLink="/admin/books"
+            >Manage Books</a
+          >
+        </li>
+        <li>
+          <a class="dropdown-item" (click)="logout()">Log Out</a>
+        </li>
+      </ul>
+    </li>
+  </ul>
+</nav>
