--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -1,3 +1,7 @@
+.mat-form-field {
+  margin-top: 16px;
+}
+
 input.ng-invalid.ng-touched {
   border: 1px solid red;
 }
@@ -28,7 +32,7 @@ body {
   }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 400px) {
   .login-form {
     margin-top: 10%;
   }
@@ -40,11 +44,12 @@ body {
 
 @media screen and (min-width: 768px) {
   .main {
-    margin-left: 40%;
+    margin-left: 32%;
+    margin-top: 10%;
   }
 
   .sidenav {
-    width: 35%;
+    width: 30%;
     position: fixed;
     z-index: 1;
     top: 0;
